--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "packages/uwcoenvws/aclkit"]
+[submodule "packages/uwuaaws/aclkit"]
 	path = packages/uwuaaws/aclkit
 	url = git@gl2.ladonnee.com:customers/uwashington/undergraduate-academic-affairs/aclkit.git
-[submodule "packages/uwcoenvws/formkit"]
+[submodule "packages/uwuaaws/formkit"]
 	path = packages/uwuaaws/formkit
 	url = git@gl2.ladonnee.com:customers/uwashington/undergraduate-academic-affairs/formkit.git
