--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Uwuaaws\\Aclkit\\": "packages/uwuaaws/aclkit/src",
-            "Uwuaaws\\Formkit\\": "packages/uwuaaws/formkit/src"
+            "Uworgws\\Aclkit\\": "packages/uworgws/aclkit/src",
+            "Uworgws\\Formkit\\": "packages/uworgws/formkit/src"
         },
         "classmap": [
             "database/seeds",
