--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,7 +11,8 @@
     </IfModule>
     RewriteEngine On
     # Don't rewrite Shibboleth.sso calls
-    RewriteRule ^/budgets/saml - [L,NC]
+    RewriteRule ^/saml - [L,NC]
+    # RewriteRule ^/budgets/saml - [L,NC]
 
     # File Exists
     RewriteCond %{REQUEST_FILENAME} -f
