--- a/packages/uworgws/importkit/composer.json
+++ b/packages/uworgws/importkit/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "nesbot/carbon": "^2.26"
+        "php": "^8.2",
+        "nesbot/carbon": "^2.70"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^10.3"
     },
     "autoload": {
         "psr-4": {
