--- a/packages/uworgws/formkit/composer.json
+++ b/packages/uworgws/formkit/composer.json
@@ -15,8 +15,7 @@
     "nesbot/carbon": "^2.70"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.3",
-    "illuminate/support": "^10.24"
+    "phpunit/phpunit": "^10.3"
   },
   "autoload": {
     "psr-4": {
